change title attempt 3

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "gatsby-starter-portfolio-whitney",
-  "description": "Gatsby Starter Portfolio Whitney",
+  "name": "whitney-lubin",
+  "description": "Whitney Lubin Software Engineer",
   "version": "2.0.0",
   "author": "Whitney Lubin <justwhitneylubin@gmail.com>",
   "license": "MIT",
